Fix flash messages div width
Change width from 200px to 400px to be as wide as the form fields.

Some messages were too long for the previuos width.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -155,5 +155,5 @@ form input#submit:hover{
 .flash {
 	background-color: #FBB0B0;
 	padding: 10px;
-	width: 200px;
+	width: 400px;
 }
